added padding to tea description so border is visible

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="tea">
                 <img src="Images/chamomile tea.jpg" alt="chamomile tea">
             </div>
-            <div>
+            <div class="tea2">
                 <h5>Chamomile, but Make It Cozy! 🍵✨</h5>
                 <p>Chamomile tea is a classic, but let me spill the tea (literally) on how I make it extra special. Forget the water, lovelies—I make my chamomile tea entirely with milk. Yes, you heard that right. The result? A creamy, dreamy cup of comfort that feels like a warm hug in a mug. Add a drizzle of honey for sweetness, and you’ve got yourself the perfect sip for cozy reading sessions. 💛</p>
                 <p>Whether I’m curled up with a slow-burn love story or diving into an enemies-to-lovers trope, this chamomile tea is always by my side. So, if you’ve never tried it with milk and honey, take this as your sign to give it a go. Trust me—it’s a total game-changer! ☁️✨</p>
