Added temporary section coming soon

--- a/tbr.html
+++ b/tbr.html
@@ -58,6 +58,7 @@
                 <h4>All Time Favorites</h4>
             </div>
         </div>
+        <h2>More coming soon!</h2>
         <footer>
             <h3>Created by Fabienne HALLOIN</h3>
         </footer>
