added a heart to footer just for cuteness

--- a/tbr.html
+++ b/tbr.html
@@ -60,7 +60,7 @@
         </div>
         <h2>More coming soon!</h2>
         <footer>
-            <h3>Created by Fabienne HALLOIN</h3>
+            <h3>Created by Fabienne HALLOIN 💜</h3>
         </footer>
     </body>
 </html>
