--- a/About.html
+++ b/About.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <footer>
-            <h3>Created by Fabienne HALLOIN</h3>
+            <h3>Created by Fabienne HALLOIN 💜</h3>
         </footer>
         <script src="script.js" defer></script>
     </body>
