--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
         </div>
         <footer>
-            <h3>Created by Fabienne HALLOIN</h3>
+            <h3>Created by Fabienne HALLOIN 💜</h3>
         </footer>
         <script src="script.js" defer></script>
     </body>
