updated one of the challenge cards

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="introduction">
                 <h4>Hey, Story Sweeties! 💕</h4>
                 <p>Okay, lovelies, it’s official—you all are now my Story Sweeties! 🍵📚✨ Whether you’re vibing with a good book or binge-reading a new series, we’re in this together. 
-                I wanted to give you all a cute name because this isn’t just a blog—it’s our little cozy corner of the internet where we connect over the feels and the fire reads.
+                I wanted to give you all a cute name because this isn’t just a blog—it’s our little cozy corner of the internet where we connect over the feels and amazing reads.
                 Think of it like this: you’ve got your tea, your fave book, and now you’ve got a squad—aka, the Story Sweeties—here to share the love for tender, heartwarming stories. We’re all about the cozy vibes, deep feels, and keeping it real in the book world. 💫
                 So grab your cozy spot, pour yourself something warm, and let’s get lost in these stories together. Welcome! 💖</p>
             </div>
@@ -75,13 +75,13 @@
                         <p><em>You Made a Fool of Death with Your Beauty</em> by Akwaeke Emezi – A bold and lyrical romance about healing and passion.</p>
                     </div>
                     <div class="card">
-                        <h5>The Cozy Christmas Challenge: Read 10 Romance Books with a Christmas Theme</h5>
-                        <h6>Goal: Embrace the magic of the holidays through cozy, festive romances that warm the heart.</h6>
+                        <h5>The World in Pages: Read 10 Fantasy books from Every Corner</h5>
+                        <h6>Goal: Dive into different cultures and worlds through 10 captivating fantasy books, each offering a unique perspective and magic from every corner of the globe.</h6>
                         <h6>Suggestions to Get Started:</h6>
-                        <p><em>In a New York Minute</em> by Kate Spencer – A sparkling, feel-good holiday romance set in the city.</p>
-                        <p><em>Window Shopping</em> by Tessa Bailey – A steamy and quirky romance perfect for the holiday vibe.</p>
-                        <p><em>The Holiday Swap</em> by Maggie Knox – Twin sisters trade places for the holidays, bringing double the romance.</p>
-                        <p><em>Meet Me Under the Mistletoe</em> by Jenny Bayliss – Friends-to-lovers with a festive, wintry backdrop.</p>
+                        <p><em>The Poppy War</em> by R.F Kuang – Set in a war-torn empire inspired by Chinese history, The Poppy War is a brutal, captivating tale of power, magic, and survival.</p>
+                        <p><em>The Sword of Kaigen</em> by M.L. Wang – A gripping epic of martial arts, family, and sacrifice, set in a Japanese-inspired world where warriors wield elemental powers to protect their homeland.</p>
+                        <p><em>Gods of Jade and Shadow</em> by Silvia Moreno-Garcia – A Mexican-inspired fantasy where a young woman’s fate intertwines with the ancient Mayan god of death, leading her on a journey of magic, rebellion, and self-discovery.</p>
+                        <p><em>Children of Blood and Bone</em> by Tomi Adeyemi – Set in a West African-inspired world, this epic tale follows a young woman’s quest to restore magic to her people and fight against an oppressive regime.</p>
                     </div>
                 </div>
                 <div class="controls">
