I switched the logo for the new one, adjusted width and height for new logo

--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
     <body id="aboutpage">
         <header>
             <div class="topside">
-                <a href="index.html"><img src="Images/logo.png"></a>
+                <a href="index.html"><img src="Logo/Asset_3.png"></a>
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
             <nav>
