--- a/tbr.html
+++ b/tbr.html
@@ -17,7 +17,7 @@
     <body id="tbr">
         <header>
             <div class="topside">
-                <a href="index.html"><img src="Images/logo.png"></a>
+                <a href="index.html"><img src="Logo/Asset_3.png"></a>
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
             <nav>
